# Solvr

./: .gitignore  CMakeLists.txt  README.md  tests.txt
Solvr/: Addition.cpp  Addition.h  BadExpression.cpp  BadExpression.h  BinaryOperation.cpp  BinaryOperation.h  CMakeLists.txt  Constant.cpp  Constant.h  Division.cpp  Division.h  Equation.cpp  Equation.h  Exponentiation.cpp  Exponentiation.h  Expression.cpp  Expression.h  InvalidExpression.h  Logarithm.cpp  Logarithm.h  Multiplication.cpp  Multiplication.h  Operation.cpp  Operation.h  Solvr.cpp  Solvr.h  Subtraction.cpp  Subtraction.h  System.cpp  System.h  UnaryOperation.cpp  UnaryOperation.h  Unsolvable.h  Variable.cpp  Variable.h  main.cpp
solvr/: CMakeLists.txt  solvr.cpp  solvr.h
