cmake_minimum_required (VERSION 3.8)

add_executable (Solvr "Solvr.cpp" "Solvr.h" "Expression.h" "Expression.cpp" "Constant.h" "Constant.cpp" "Operation.h" "Operation.cpp" "Addition.h" "Addition.cpp" "Subtraction.h" "Subtraction.cpp" "Multiplication.h" "Multiplication.cpp" "Division.h" "Division.cpp" "Exponentiation.h" "Exponentiation.cpp" "Variable.h" "Variable.cpp" "BadExpression.h" "BadExpression.cpp")
