cmake_minimum_required(VERSION 3.8)

add_executable(Solvr "Solvr.cpp" "Solvr.h" "Expression.h" "Expression.cpp" "Constant.h" "Constant.cpp" "BinaryOperation.h" "BinaryOperation.cpp" "Addition.h" "Addition.cpp" "Multiplication.h" "Multiplication.cpp" "Exponentiation.h" "Exponentiation.cpp" "Variable.h" "Variable.cpp" "Equation.cpp" "Equation.h" "InvalidExpression.h" "Unsolvable.h" "UnaryOperation.cpp" "UnaryOperation.h" Logarithm.cpp Logarithm.h)
